assets/style/style.css
/************* 
- reset css -
*************/

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    /* border: 1px dashed black; */
}

a {
    text-decoration: none;
}

img {
    max-width: 100%;
    display: block;
    object-fit: cover; 
}

/************* 
- font -
*************/

@import url('https://fonts.googleapis.com/css2?family=Manrope&family=PT+Sans&display=swap');

html {
    font-family: 'Manrope', sans-serif;
}

/************* 
- properties - 
*************/

#Web-App{
    height: 100vh;
}

#big-flex-container {
    width: 100%;
    background-color: #141922;
    /* display: flex; */
    /* justify-content: space-between; */
}

/********** - aside_section - ************/

#big-flex-container #aside-section {
    min-width: 10em;
    height: calc(100vh - 5em);
    display: flex;
    flex-direction: column;
    /* justify-content: space-between; */
    padding-block: 5px;
    /* padding-inline: 20px; */
    position: fixed;
    left: 0;
    top: 0;
    color: white;
    background-color: #000000;
}

#big-flex-container #aside-section #top-aside {
    display: flex;
    flex-direction: column;
    gap: 1.5em;
    height: calc(100% - 4em);
    overflow: hidden;  
    min-height: 17em;
}

#big-flex-container #aside-section #top-aside #logo {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    margin-top: 15px;
}

#big-flex-container #aside-section #top-aside #logo div:first-child svg{
    height: 80%;
}

#big-flex-container #aside-section #top-aside #logo div:first-child {
    width: 100%;
    height: 3em;
}

#big-flex-container #aside-section #top-aside #functions {
    display: flex;
    flex-direction: column;
    gap: 10px;
}

#big-flex-container #aside-section #top-aside #functions .function {
    width: 100%;
    height: 1em;
    display: flex;
    gap: 5px;
    align-items: center;
}

/* #big-flex-container #aside-section #top-aside #functions .function div:first-child {
    width: 25%;
} */

#big-flex-container #aside-section #top-aside #functions .function div:last-child {
    width: calc(75% - 5px);
    font-size: 0.6em;
}

#big-flex-container #aside-section #top-aside #playlist {
    display: flex;
    flex-direction: column;
    width: 100%;
    overflow: auto;
    gap: 5px;
}

#big-flex-container #aside-section #top-aside #playlist h4 {
    height: 20px;
    text-transform: uppercase;
    color: white;
    font-weight: bold;
}

#big-flex-container #aside-section #top-aside #playlist #new-playlist {
    display: flex;
    height: 30px;
    flex-direction: row;
    justify-content: flex-start;
    gap: 5px;
    align-items: center;
}

#big-flex-container #aside-section #top-aside #playlist #new-playlist div:first-child {
    width: 20%;
}

#big-flex-container #aside-section #top-aside #playlist #new-playlist div:last-child {
    width: calc(80% - 5px);
    font-size: 0.7em;
}

#big-flex-container #aside-section #top-aside #playlist #playlists {
    display: flex;
    flex-direction: column;
    gap: 10px;
    overflow: auto;
}

#big-flex-container #aside-section #top-aside #playlist #playlists div {
    height: 10px;
    font-size: 0.5em;
}

#big-flex-container #aside-section #bottom-aside {
    display: flex;
    flex-direction: column;
    gap: 0.5em;
    height: 4em;  
    margin-bottom: 0.5em;
}

#big-flex-container #aside-section #bottom-aside #download-app,
#big-flex-container #aside-section #bottom-aside #my-account {
    display: flex;
    gap: 0.5em;
    align-items: center;
}

#big-flex-container #aside-section #bottom-aside #download-app div:first-child {
    align-self: center;
    width: 1.5em;
}

#big-flex-container #aside-section #bottom-aside #download-app div:last-child {
    width: calc(80% - 5px);
    font-size: 0.6em;
    align-self: center;
}

#big-flex-container #aside-section #bottom-aside hr{
    border: 0.5px solid white;
    opacity: 0.5;
}

#big-flex-container #aside-section #bottom-aside #my-account div:first-child {
    width: 35%;
}

#big-flex-container #aside-section #bottom-aside #my-account div:last-child {
    width: calc(65% - 5px);
}


#big-flex-container #aside-section #bottom-aside #download-app div:first-child,
#big-flex-container #aside-section #bottom-aside #download-app div:last-child {
    height: 1em;
}

#big-flex-container #aside-section #bottom-aside #my-account div:first-child {
    height: 2em;
    width: 2em;
    border-radius: 50%;
    overflow: hidden;
    aspect-ratio: 1;
    background-color: gray;
}

#big-flex-container #aside-section #bottom-aside #my-account div:last-child {
    font-size: 0.8em;
    font-weight: bold;
}


/* utility */

.less-opacity{
    opacity: 0.5;
}

.less-opacity:hover{
    opacity: 1;
}

#hide-show{
    display: none;
}

.transition{
    transition: 0.5s; 
}

.transition:hover{
    transform: scale(150%); 
}

#transition-02:hover{
    transform: scale(120%);
}

#border-bottom{
    position: relative;
    text-align: center;
}

#border-bottom::after {
    content:'';
    position:absolute;
    width: 2em;
    height:1px;
    background-color: greenyellow;
    bottom:-0.3em;
    left:0;
    right:0;
    margin: auto;
}

.margin-left{
    margin-inline: 20px;
}

#border-left{
    border-left: 1px solid greenyellow;  
    padding-left: 19px; 
}


/********** - major_section - ************/

#big-flex-container #major-section {
    width: calc(100% - 10em);
    justify-self: flex-end;
    height: 100%; 
    background-color: #141922;
    margin-left: 10em;
}

#major-section #upgrade{
    height: 5em;
    position: fixed;
    left: 10em;
    top: 0;
    right: 0;
    display: flex;
    justify-content: flex-end;
    align-items: center;
    background-color: rgba(0, 0, 0, 0.75);
    z-index: 30;
}

#major-section #upgrade a{
    font-size: 13px;
    margin-right: 2em;
    text-decoration: none;
    color: white;
    text-transform: uppercase;
    border: 1px solid white;
    border-radius: 20px;
    padding-block: 1em ;
    padding-inline: 4em;
}
/* ... */

